2006-03-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/plugs/loggers.py (ApacheLogger.start): Valid
	syntax, but still not implemented.

	* flumotion/common/registry.py (RegistryParser._parseEntries.addEntry) 
	(RegistryParser._parsePlug): Raise the right error.

	* flumotion/test/test.xml:
	* flumotion/test/test_component.py:
	* flumotion/test/test_htpasswdcrypt.py:
	* flumotion/test/test_http.py:
	* flumotion/test/test_pb.py: No more logfile property in
	http-streamer, and the manual config dicts needed updating for
	'plugs'.

2006-03-21  Andy Wingo  <wingo@pobox.com>

	* flumotion/extern/fdpass/Makefile.am (common_cflags): Compile
	with -fPIC. (How many more of this kind of commit will we have?)

	* flumotion/component/consumers/httpstreamer/http.py (HTTPMedium):
	Remove code to do admin calls with logging information, that
	should be implemented via a logger.
	(HTTPMedium.remote_rotateLog): Call rotateLogs, not
	rotateLogfile.
	(MultifdSinkStreamer): No more log-message signal, or
	logfile-related code.

	* flumotion/component/consumers/httpstreamer/resources.py
	(HTTPStreamingResource.__init__): Remove all logfile-specific
	code, just use the loggers set from the plugs.
	(HTTPStreamingResource.rotateLogs): Rename from rotateLogfiles,
	will call rotate() on all loggers.
	(HTTPStreamingResource.logWrite): Instead of generating a string,
	pass a dict with all necessary information to all loggers via
	event('http_session_completed').

	* flumotion/launch/main.py (ComponentWrapper.__init__): Set up
	config['plugs'] as the components expect it.

	* flumotion/component/component.py (BaseComponent.setup): Setup
	the plugs before running do_check or do_setup.

	* doc/random/component-initialization-protocol
	(BaseComponent.setup): Update to note the need to do what is
	necessary to load up plugs.

	* flumotion/common/config.py (FlumotionConfigXML): Inherit from
	fxml.Parser so we get parseFromTable, and parseAttributes. However